# dlwpt-code

./: .gitignore  ERRATA.html  README.md  README_NeuralTalk2.md  dataloader.py  dataloaderraw.py  eval.py  eval_utils.py  generate_annotations_with_malignancy.ipynb  opts.py  p1ch2_beginning_code.ipynb  p1ch2_cyclegan.ipynb  p1ch2_mnist.ipynb  p2_run_everything.ipynb  p2ch07_explore_data.ipynb  p2ch08_explore_data.ipynb  p2ch09_explore_data.ipynb  p2ch10_explore_data.ipynb  p2ch12_explore_data.ipynb  p2ch12_explore_diagnose.ipynb  p2ch13_explore_data_v2.ipynb  p2ch13_explore_diagnose.ipynb  p2ch14_malben_baseline.ipynb  p2ch1_explore_data.ipynb  p2ch4_explore_data.ipynb  requirements.txt  train.py
docs/: errata.html  index.html
errata/: css
misc/: resnet.py  resnet_utils.py  utils.py
models/: Att2inModel.py  AttModel.py  CaptionModel.py  FCModel.py  OldModel.py  ShowTellModel.py  __init__.py
p1ch2/: 1_making_sure_things_work.ipynb  2_practice.ipynb  2_pre_trained_networks.ipynb  3_cyclegan.ipynb  3_practice.ipynb  4_mnist.ipynb  mnist.pth  my_script.ipynb
p1ch3/: 1_tensors.ipynb  2_named_tensors.ipynb
p1ch4/: 1_image_dog.ipynb  1_tabular_wine.ipynb  2_time_series_bikes.ipynb  2_volumetric_ct.ipynb  3_tabular_wine.ipynb  3_text_jane_austin.ipynb  4_audio_chirp.ipynb  5_image_dog.ipynb  (+6 more)
p3ch15/: 1_jit_intro.ipynb  CMakeLists.txt  cls_client.py  cyclegan.py  cyclegan_cpp_api.cpp  cyclegan_jit.cpp  flask_hello_world.py  flask_server.py  request_batching_jit_server.py  request_batching_server.py
p3ch15/android/: MainActivity.java  activity_main.xml  build.gradle
(+213 files in other folders)
